# ccrtp

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  Makefile.in  PKGBUILD.in  README  README.md  aclocal.m4  autogen.sh  ccrtp-config.h  ccrtp.list  ccrtp.spec  ccrtp.spec.in  configure  configure.ac  directive.in  libccrtp.pc  libccrtp.pc.in
cmake/: CapeConfig.cmake  CapeMakeTargets.cmake
cmake/Modules/: FindGcryptConfig.cmake  GeneratePackage.cmake  LibFindMacros.cmake  SourceDistribution.cmake  UseRPMTools.cmake
demo/: Makefile.am  Makefile.in  audio.h  audiorx.cpp  ccrtptest.cpp  rtpduphello.cpp  rtphello.cpp  rtplisten.cpp  rtpsend.cpp
doc/: CMakeLists.txt  Makefile.am  Makefile.in  ccrtp.info
m4/: Makefile.in
phone/: CMakeLists.txt  Makefile.am  Makefile.in  config.cpp  phone.cpp  phone.h  rtp.cpp  server.cpp  server.h
src/: CMakeLists.txt  CryptoContextCtrl.cpp  Makefile.am  Makefile.in  control.cpp  data.cpp  duplex.cpp  incqueue.cpp  members.cpp  outqueue.cpp  pool.cpp  private.h  queue.cpp  rtcppkt.cpp  rtppkt.cpp  socket.cpp  source.cpp
src/ccrtp/: CMakeLists.txt  CryptoContext.h  CryptoContextCtrl.h  Makefile.am  Makefile.in  base.h  channel.h  cqueue.h  ext.h  formats.h  ioqueue.h  iqueue.h  oqueue.h  pool.h  queuebase.h  rtcppkt.h  rtp.h  rtppkt.h  sources.h
src/ccrtp/crypto/: Makefile.am  Makefile.in  macSkein.cpp  macSkein.h  skeinApi.c  skeinApi.h
src/ccrtp/crypto/gcrypt/: InitializeGcrypt.cpp
src/ccrtp/crypto/openssl/: hmac.cpp
w32/: Makefile.am  Makefile.in
